--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 			<div class="center_wrap">
 				<div class="box_common box2"><h1>Contact</h1>
 					<p><a href="mailto:presnyak@me.com">presnyak@me.com</a></p>
-					<p>(732) 216 6590</p>
+					<p>+7 (909) 907-58-32</p>
 				</div>
-				<div class="box_common box1"><h1>Address</h1>
-					<p>Georgiy Presnyakov<br/>4727 Ravenna Ave NE, Apt. 301<br/>Seattle WA 98105</p>
+				<div class="box_common box1"><h1></h1>
+					<p><br/><br/></p>
 				</div>
 			</div>
 		</div>
