--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	
 	<body>
 		<p class="hello">Hello.</p>
-		<p class="description">My name is Georgiy Presnyakov,<br/>and this is my work.</p>
+		<p class="description">My name is Georgiy Presnyakov,<br/>and this is my work. <br/><a href="https://github.com/dinoholic">https://github.com/dinoholic</a></p>
 				
 		<div id="sticker" class="tab_centered"><a href="#dev">Code</a> • <a href="#design">Design</a> • <a href="#engineer">Engineering</a> • <a href="#contact">Contact</a></div>
 				
