--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Georgiy Presnyakov</title>
 		<meta name="description" content="This page will give you a glimpse at some of my hobbies."/>
-		<meta name="keywords" content="presnyakov, georgiy, design, developer, student, engineer, html, css, ios"/>
+		<meta name="keywords" content="presnyakov, georgiy, engineering, student, development, design, html, css, ios"/>
 		<meta name="Author" content="Georgiy Presnyakov" />
 		<meta http-equiv="Content-Language" content="en-us" />
 		<meta name="language" content="English" />
@@ -22,38 +22,11 @@
 		<script type="text/javascript">
 			$(document).ready(function() {$.localScroll({duration:500});});
 		</script>
-		<script type="text/javascript">
-			$(document).ready(function() {
-				var s = $("#sticker");
-				var pos = s.position();                    
-				$(window).scroll(function() {
-					var windowpos = $(window).scrollTop();
-//					s.html("Distance from top:" + pos.top + "<br />Scroll position: " + windowpos);
-					if (windowpos >= pos.top) {
-						s.addClass("stick");
-					} else {
-						s.removeClass("stick"); 
-					}
-				});
-			});
-		</script>
-		
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-39380621-2', 'washington.edu');
-		  ga('send', 'pageview');
-
-		</script>
-		
 	</head>
 	
 	<body>
 		<p class="hello">Hello.</p>
-		<p class="description">My name is Georgiy Presnyakov,<br/>and this is my work. <br/><a href="https://github.com/dinoholic">https://github.com/dinoholic</a></p>
+		<p class="description">My name is Georgiy Presnyakov,<br/>and this is my work. <br/><br/><a href="https://github.com/dinoholic">https://github.com/dinoholic</a></p>
 				
 		<div id="sticker" class="tab_centered"><a href="#dev">Code</a> • <a href="#design">Design</a> • <a href="#engineer">Engineering</a> • <a href="#contact">Contact</a></div>
 				
