--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		</div>
 
 		<div id="contact" class="section">
-			<div class="center_wrap">
+			<div class="center_wrap short_section">
 				<div class="box_common box2"><h1>Contact</h1>
 					<p><a href="mailto:presnyak@me.com">presnyak@me.com</a></p>
 					<p>+7 (909) 907-58-32</p>
